--- a/smart-calendar/package.json
+++ b/smart-calendar/package.json
@@ -33,7 +33,8 @@
     "@angular/router": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@fortawesome/fontawesome-free": "^6.5.1"
   },
   "devDependencies": {
     "@angular/build": "^20.3.4",
