--- a/smart-calendar/backend/package.json
+++ b/smart-calendar/backend/package.json
@@ -47,6 +47,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/pg": "^8.10.9",
+    "diff": "^8.0.3",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2"
